--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,9 @@
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
+        },
+        "branch-alias": {
+            "dev-master": "0.1-dev"
         }
     }
 }
