--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "sensio/framework-extra-bundle": "^3.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/generator-bundle": "^3.0",
-        "incenteev/composer-parameter-handler": "^2.1"
+        "incenteev/composer-parameter-handler": "^2.1",
+
+        "topobz/topo-admin-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
