--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ SYMFONY__DATABASE_NAME     = topomicro
 SYMFONY__DATABASE_USER     = root
 SYMFONY__DATABASE_PASSWORD = null
 
+# Monolog configuration
+
+SYMFONY__LOG_ACTION_LEVEL = debug
+
 # Swiftmailer configuration
 
 SYMFONY__MAILER_TRANSPORT        = smtp
