--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "sensio/generator-bundle": "^3.0",
         "vlucas/phpdotenv": "^2.3",
 
-        "topobz/topo-admin-bundle": "dev-master"
+        "topobz/topo-admin-bundle": "dev-master",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.0"
     },
     "scripts": {
         "post-install-cmd": [
